# GNSSINV

./: .gitignore  01_read_ITRF_res_files.py  01_read_esm_loadings_files.py  01_read_snx_crd_files.py  02_displacements_from_esmgfz_nc_grids.py  02_displacements_from_est_apr_snx.py  03A_global_map_analysis_consistency.py  03_displacements_from_esmgfz.py  03_displacements_from_esmgfz_point.py  03_displacements_from_snx.py  04_1_analysis_compare_snx_displacements_with_load.py  04_2_global_map_analysis_consistency.py  04_analysis_compare_snx_disp_with_load.py  04_displacement_inversion.py  05_analysis_gfc_c20c30.py  05_analysis_gfc_degree1.py  05_displacement_inversion.py  06_analysis_gfc_c20c30.py  06_analysis_gfc_degree1.py  06_statistics_comparison.py  README.md  boxplot_of_solution_statistics.py  gcc_analysis_tools.py  pyproject.toml  requirements.txt  toolbox_displacement_to_gravity_coefficients.py  toolbox_gfc_analysis.py  toolbox_gravity_validation.py
DATA/SNX_ORIGINAL/IGS1R03SNX/: IGS1R03SNX_20223290000_01D_01D_CRD.SNX  IGS1R03SNX_20223300000_01D_01D_CRD.SNX
EXT/: TN-14_C20_C30
EXT/GCC/: A.gc  AHOS.gc  H.gc  O.gc  S.gc  ig3.gc  slr.gc
EXT/PROCESSINS_SUPPLEMENTS/: ALL_STATIONS_LATLON.pkl
OUTPUT/IGS1R03SNX_01D/20180101/: gravity_coeffs_SLD_20_20180101_load.gfc  gravity_coeffs_SLD_20_20180101_load.txt  gravity_coeffs_SLD_20_20180101_potential.gfc  gravity_coeffs_SLD_20_20180101_potential.txt  gravity_coeffs_SLD_20_20180101_summary.txt  gravity_coeffs_SLD_20_20180101_summary.yaml  gravity_coeffs_SLD_6_20180101_load.gfc  gravity_coeffs_SLD_6_20180101_load.txt  (+4 more)
(+4 files in other folders)
