[tool.poetry]
name = "GNSSINV"
version = "0.1.0"
description = "Geodetic Station Displacement Analysis Toolkit for analyzing global geodetic measurements and their relationship to geophysical loading phenomena"
authors = ["Radoslaw Zajdel <radoslaw.zajdel@pecny.cz>"]
readme = "README.md"
license = "MIT"
packages = [{include = "toolbox"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^2.1.0"
pandas = "^2.2.0"
matplotlib = "^3.9.0"
cartopy = "^0.23.0"
scipy = "^1.14.0"
xarray = "^2024.7.0"
netCDF4 = "^1.7.0"
geodezyx = "^4.4.0"
astropy = "^7.0.0"
pyyaml = "^6.0.0"
tqdm = "^4.66.0"
psutil = "^5.9.0"
statsmodels = "^0.14.0"
pyproj = "^3.6.0"
pooch = "^1.8.0"
pyshtools = "^4.13.0"
seaborn = "^0.13.0"
joblib = "^1.4.0"
scikit-learn = "^1.5.0"
colorlog = "^6.8.0"
pathvalidate = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
ipykernel = "^6.20.0"
jupyterlab = "^4.0.0"
openpyxl = "^3.1.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"